k8s/order-history/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-history
spec:
  selector:
    app: order-history
  ports:
  - name: http-order-history
    protocol: TCP
    port: 80
    targetPort: 8080
